Changelog
=========

1.0 (unreleased)
----------------

* Make get_salesforce_suds_client return a client even if the authentication
  failed, to make it easier to log exceptions including the message that was
  to be sent to Salesforce.
  [davisagli - 2011-07-26]

* Initial implementation.
  [davisagli, jessesnyder]