@@ -15,6 +15,16 @@
       provides="Products.GenericSetup.interfaces.EXTENSION"
       />
 
-  <!-- -*- extra stuff goes here -*- -->
+  <permission
+      id="collective.salesforce.credentials.ManageSalesforceCredentials"
+      title="collective.salesforce.credentials: Manage Salesforce credentials"
+      />
+
+  <browser:page
+      for="Products.CMFCore.interfaces.ISiteRoot"
+      name="manage-salesforce-credentials"
+      class=".browser.CredentialsControlPanel"
+      permission="collective.salesforce.credentials.ManageSalesforceCredentials"
+      />
 
 </configure>
