@@ -1,0 +1,20 @@
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:metal="http://xml.zope.org/namespaces/metal"
+      xmlns:tal="http://xml.zope.org/namespaces/tal"
+      xmlns:i18n="http://xml.zope.org/namespaces/i18n"
+      i18n:domain="plone.z3cform"
+      tal:omit-tag="">
+
+  <p class="crud-description"
+       tal:condition="view/description"
+       tal:content="view/description">
+  </p>
+
+  <tal:block metal:use-macro="context/@@ploneform-macros/titlelessform" />
+
+  <div tal:repeat="form view/subforms"
+       tal:content="structure form/render"
+       class="crud-form">
+  </div>
+
+</html>
